--- a/projet_algo.rmd
+++ b/projet_algo.rmd
@@ -1,6 +1,6 @@
 ---
 title: "Projet d’Algorithmique : Classification des séries temporelles à l'aide Dynamic Time Wraping"
-author: "Noms"
+author: "Sarah Eliko, Fatimah-Zara Aklila , Samira Sonfack"
 date: "`r format(Sys.Date(), '%d %B %Y')`"
 output:
   html_document:
@@ -168,7 +168,7 @@ Le DTW a « déformé » le temps pour trouver un alignement optimal entre les p
 
 
 ```{r}
-library(ProjetM2Algo.Rproj)
+
 x <- c(1, 3, 4, 9)
 y <- c(1, 3, 7, 8, 9)
 dtw_result <- dtw(x, y)
@@ -241,7 +241,7 @@ En limitant les correspondances possibles, l’algorithme améliore non seulemen
 ###Simulation de la complexité temporelle
 
 ```{r}
-n_values_test <- round(exp(seq(log(50), log(5000), length.out = 15)))
+n_values <- round(exp(seq(log(50), log(5000), length.out = 15)))
 res <- simulate_dtw_sakoe_chiba(
       n_values,
       algo_r = dtw_sakoe_chiba,
