--- a/projet_algo.rmd
+++ b/projet_algo.rmd
@@ -1,6 +1,6 @@
 ---
 title: "Projet d’Algorithmique : Classification des séries temporelles à l'aide Dynamic Time Wraping"
-author: "Noms"
+author: "Sarah Eliko, Fatimah-Zara Aklila , Samira Sonfack"
 date: "`r format(Sys.Date(), '%d %B %Y')`"
 output:
   html_document:
@@ -168,7 +168,7 @@ Le DTW a « déformé » le temps pour trouver un alignement optimal entre les p
 
 
 ```{r}
-library(ProjetM2Algo)
+
 x <- c(1, 3, 4, 9)
 y <- c(1, 3, 7, 8, 9)
 dtw_result <- dtw(x, y)
@@ -197,10 +197,14 @@ Ainsi, si le graphique \(\log(n)\) -- \(\log(T)\) présente une pente
 proche de \(2\), cela confirme expérimentalement la complexité quadratique
 théorique du DTW.
 
+
+### Simulation de la complexité
+
 ```{r}
 # R
 res <- simulation_dtw(debut = 10, fin = 500, pas = 10)
 res
+
 ```
 
 ```{r}
@@ -210,8 +214,202 @@ res
 ```
 
 
+## Algorithme du DTW avec bande de Sakoe Chiba fixe - Sakoe Chiba Band
 
 
+L’algorithme de **Sakoe–Chiba** introduit une contrainte locale appelée **bande de Chiba** afin de limiter les déformations autorisées lors du calcul du *Dynamic Time Warping* (DTW). Dans la formulation classique de la DTW, la matrice de coût est entièrement parcourue, ce qui conduit à une complexité temporelle en $O(N^2)$ pour deux signaux de longueur $N$.
+
+Or lorsqu'on applique l'algorithme sur la même série on voit que le chemin optimal correspond à la diagonale et s'en éloigne d'autant plus que les séries diffèrent. La bande de Chiba impose que l’alignement optimal reste à l’intérieur d’une fenêtre de largeur prédéfinie autour de la diagonale principale.Une variante propose une fenêtre mobile sous forme de matrice dde "région":
+- pour un point $(i,j)$, seules les cellules telles que  
+  \[
+  |i - j| \leq \text{radius}
+  \]  
+  sont considérées ; 
+  
+  On considèrera ici à **une taille de bande fixe**  **radius** dans toutes les directions. Ainsi, seuls les coûts des cellules situées dans cette zone restreinte sont évalués.
+
+Grâce à cette contrainte, le nombre d’opérations nécessaires est considérablement réduit, faisant passer la complexité temporelle à :
+
+$$
+O(N \cdot w)
+$$
+
+où $w$ est la demi-largeur de la bande, généralement beaucoup plus petite que $N$.
+
+En limitant les correspondances possibles, l’algorithme améliore non seulement l’efficacité computationnelle, mais également la robustesse de l’alignement, tout en conservant une bonne précision lorsque les signaux ne présentent pas de fortes distorsions temporelles.
+
+### Calcul théorique de complexité
 
 
+Soit deux séries temporelles de longueur égale $N$.  
 
+Avec **une bande de Chiba de radius $r$** (fenêtre fixe autour de la diagonale), seules les cellules telles que $|i - j| \le r$ sont calculées.  
+
+Chaque ligne de la matrice contient au maximum $2r + 1$ cellules évaluées. La complexité devient donc :
+
+$$
+T_{\text{DTW_bande}}(N, r) = O(N \cdot (2r + 1)) \approx O(N \cdot r)
+$$
+
+où $r$ est généralement beaucoup plus petit que $N$.  
+
+Ainsi, la réduction de la complexité par rapport au DTW classique est significative, surtout pour de grandes séries temporelles.
+
+---
+
+### Représentation log-log
+
+Pour visualiser la complexité, on peut utiliser une **échelle log-log** :
+
+$$
+x = \log(N), \quad y = \log(T(N))
+$$
+
+- Pour le **DTW avec bande fixe** :  
+
+$$
+y = \log(N \cdot r) = \log(r) + \log(N) \approx \log(N) \quad \text{si $r$ constant}
+$$
+
+En pratique :  
+
+Sur un graphique log-log, la **pente de la droite** correspond à l’exposant de $N$. Donc une pente ≈ 1 
+ 
+   
+
+###Simulation de la complexité temporelle
+
+```{r}
+n_values <- round(exp(seq(log(50), log(5000), length.out = 15)))
+res <- simulate_dtw_sakoe_chiba(
+      n_values,
+      algo_r = dtw_sakoe_chiba,
+      algo_rcpp = dtw_sakoe_chiba_rcpp,
+      radius = 2,
+      plot = TRUE
+      )
+```
+
+```{r}
+res
+```
+
+
+## Segmental DTW 
+Le segmental DTW (SDTW) est une variante du DTW classique utilisée pour comparer deux séries temporelles par segments plutôt que globalement.
+
+Il repose sur 3 idées principales :
+-	Au lieu de comparer toute la série X avec toute la série Y, on découpe Y en segments de longueur fixe. 
+-	On effectue le DTW sur chaque segment séparément. 
+-	Ensuite, on combine les distances segmentales pour obtenir une distance globale ou un alignement segment par segment.
+
+### Etapes de Segmental DTW 
+#### Segmentation 
+Dans le code, la première étape consiste à diviser la série serie2 en segments de longueur fixe segment_length :
+```{r}
+serie1 <- c(1, 3, 4, 9, 8)
+serie2 <- c(1, 2, 3, 4, 7, 8, 9, 10)
+segment_length <- 2
+segments <- segment_series(serie2, segment_length)
+
+```
+
+Cette étape permet de traiter serie2 par blocs, ce qui est plus efficace et facilite l’analyse locale.
+
+#### Calcul du DTW pour chaque segment 
+Ensuite, pour chaque segment, le code calcule le DTW entre serie1 complète et les segments courants de la serie2 :
+```{r}
+dtw_segments <- compute_segment_dtw(serie1, serie2, segments)
+dtw_segments[1]
+```
+Chaque élément de dtw_segments contient la matrice des coûts cumulés frame-level, le chemin optimal et la matrice de traces pour reconstruire le chemin. 
+Cette étape correspond à l'alignement local segment par segment, au lieu d'un DTW global sur toute la série 2. 
+
+#### Calcul des coûts segmentaux 
+Pour combiner les distances locales, le code extrait la dernière ligne de chaque matrice DTW pour chaque segment :
+
+```{r}
+seg_cost_list <- compute_segment_level_cost(dtw_segments)
+seg_cost_list
+```
+La dernière ligne de DTW_matrix représente le coût pour atteindre chaque frame de serie1 à la fin du segment.
+seg_cost_list devient la base pour calculer le cumulative cost global segment-level.
+
+#### Cumulative cost des segments
+Le code cumule les coûts des segments pour obtenir la distance globale :
+```{r}
+n_seg <- length(segments)
+n_len <- length(serie1)
+cum_cost <- matrix(Inf, nrow=n_seg, ncol=n_len)
+cum_cost[1, 1:length(seg_cost_list[[1]])] <- seg_cost_list[[1]]
+
+for(i in 2:n_seg){
+  seg_cost <- seg_cost_list[[i]]
+  for(j in 1:length(seg_cost)){
+    min_prev <- min(cum_cost[i-1, j:n_len])
+    cum_cost[i,j] <- seg_cost[j] + min_prev
+  }
+}
+
+cum_cost
+```
+
+cum_cost[i,j] : coût minimal pour atteindre la position j dans serie1 après avoir traité i segments de serie2.
+
+On effectue une recherche du minimum cumulatif sur les positions restantes pour connecter les segments.
+
+#### Backtrace segment-level
+Une fois la matrice cumulative calculée, on retrace le chemin optimal segment par segment. Cette étape permet de retrouver la séquence optimale de segments qui minimise la distance globale.
+```{r}
+path_seg <- list()
+i <- n_seg
+j <- which.min(cum_cost[n_seg, ])
+while(i > 0){
+  path_seg <- append(list(c(i,j)), path_seg)
+  if(i==1) break
+  j <- which.min(cum_cost[i-1, j:n_len])
+  i <- i-1
+}
+path_seg
+```
+
+
+#### Reconstruction du chemin frame-level final et calcul de la distance de DTW
+
+Enfin, le code reconstitue le chemin frame-level global à partir des chemins de chaque segment et retourne la distance DTW finale.
+
+```{r}
+result <- segmental_dtw_two_series(serie1, serie2, segment_length = 2)
+
+cat("Distance DTW finale segmentale :", result$dtw_distance, "\n")
+cat("Chemin frame-level final :\n")
+print(result$final_path)
+```
+
+
+#### Evaluation de la compléxité de Segmental DTW
+Soient deux séries de longueurs n et m, et un segment de longueur L. 
+Si la série cible est partitionnée en 
+\[
+S = \lceil m / L \rceil
+\]
+segments, la complexité totale du **Segmental DTW** s’écrit :
+
+\[
+O(S \cdot n \cdot L) = O(n \cdot m)
+\]
+
+Ce qui correspond à la complexité théorique du DTW global, mais avec plusieurs avantages pratiques :
+- **Mémoire optimisée :** seules des matrices de taille n×L sont allouées à chaque étape, limitant l’usage de la mémoire vive.
+
+- **Possibilité de parallélisation :** chaque segment peut être traité indépendamment, ouvrant la voie à des accélérations sur architectures multi-cœurs.
+
+- **Alignements locaux précis :** le découpage segmental permet de capturer des correspondances locales qui pourraient être diluées dans un DTW global.
+
+#### Test de la complexité :
+```{r}
+res_complexity <- segmental_dtw_complexity()
+print(paste("Exposant empirique estimé :", round(res_complexity$slope, 2)))
+```
+
+"Exposant empirique estimé : 1.76" Cette valeur de pente confirme que la méthode est très efficace pour de longues séries segmentées, tout en restant fidèle à sa complexité théorique.
