--- a/projet_algo.rmd
+++ b/projet_algo.rmd
@@ -292,7 +292,7 @@ df_before <- full_join(
 plot_before <- ggplot(df_before, aes(x = Date)) +
   geom_line(aes(y = Stock, color = "Stock")) +
   geom_line(aes(y = Commodity, color = "Commodity")) +
-  labs(title = "1. Avant DTW : Séries Brutes",
+  labs(title = "Avant DTW : Séries Brutes",
        y = "Prix de Clôture",
        color = "Série") +
   theme_minimal() +
@@ -302,7 +302,7 @@ plot_before <- ggplot(df_before, aes(x = Date)) +
 plot_after <- ggplot(df_aligned, aes(x = Index)) +
   geom_line(aes(y = Stock, color = "Stock")) +
   geom_line(aes(y = Commodity, color = "Commodity")) +
-  labs(title = paste("2. Après DTW : Séries Alignées (radius =", radius, ")"),
+  labs(title = paste("Après DTW (radius =", radius, ")"),
        x = paste("Indice Alignement (L:", length(aligned_X), ")"),
        y = "Prix de Clôture (Aligné)",
        color = "Série") +
@@ -388,7 +388,7 @@ gridExtra::grid.arrange(
     res1$plot, 
     res2$plot, 
     ncol = 2,
-    top = "Comparaison de la Complexité R vs Rcpp sous différentes contraintes"
+    top = "Comparaison de la Complexité R vs Rcpp sous différentes contraintes radius=1 et radius=5"
 )
 ```
 
@@ -405,15 +405,10 @@ cat("\n* Pente Rcpp (Radius 1) : **", round(res1$slope_rcpp, 4), "**")
 cat("\n* Pente Rcpp (Radius 2) : **", round(res2$slope_rcpp, 4), "**")
 
 ```
-On voit conformément au résultat théorique attendu qu'on a une complexité $O(N)$ avec un pente très proche de 1 pour le code Rcpp et légèrement supérieure à 1 en R. On vérifie également que la **complexité varie peu selon le radius** . Les résultats autour de **1.45** pour le code R mettent en évidence les faiblesses de l'interpréteur R qui introduit un temps de calcul supplémentaire qui augmente avec la valeur de N. Rcpp à contrario est compilé et facilite les calculs lourds tels que les boucles imbriquées.
+On voit conformément au résultat théorique attendu qu'on a une complexité $O(N)$ avec un pente très proche de 1 pour le code Rcpp et légèrement supérieure à 1 en R. On vérifie également que la **complexité varie peu selon le radius** . Les résultats autour de **1.45** pour le code R mettent en évidence les faiblesses de l'interpréteur R qui introduit un temps de calcul supplémentaire qui augmente avec la valeur de N. Rcpp à contrario est compilé et facilite les calculs lourds tels que les boucles imbriquées. De plus les type Rcpp optimise la gestion de la mémoire.
 
 
 
-
-<<<<<<< HEAD
-
-=======
->>>>>>> b1192dc85405ea831bbfe7076b0e89f41ca173a9
 ## Segmental DTW 
 
 
